--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "chat app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "dev": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,11 +28,15 @@
   },
   "homepage": "https://github.com/IvanTorresMia/ChatApp-React#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "moment": "^2.29.1",
+    "react-router-dom": "^6.0.2",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
+    "concurrently": "^4.1.2",
     "nodemon": "^2.0.15"
   }
 }
