--- a/package.json
+++ b/package.json
@@ -28,11 +28,18 @@
   },
   "homepage": "https://github.com/IvanTorresMia/ChatApp-React#readme",
   "dependencies": {
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "moment": "^2.29.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "path": "^0.12.7",
     "react-router-dom": "^6.0.2",
+    "sequelize": "^6.12.0-alpha.1",
+    "sequelize-cli": "^6.2.0",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
