--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "sequelize": "^4.41.2",
+    "sequelize-cli": "^6.2.0",
     "if-env": "^1.0.4",
     "moment": "^2.29.1",
     "react-router-dom": "^6.0.2",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "mysql2": "^1.6.4"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
